--- a/AdminPanel/src/app/app.component.html
+++ b/AdminPanel/src/app/app.component.html
@@ -1,14 +1,14 @@
-<p>
+<p *ngIf="authService.hasUser">
   <mat-toolbar color="primary">
     
     <span>Welcome </span>    
     <span class="spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
+    <button mat-icon-button (click)="onLogout()"
+    >
+      <mat-icon>logout</mat-icon>
     </button>
   </mat-toolbar>
 </p>
+
+<router-outlet></router-outlet>
 
