adminPanel: order list page ...

--- a/AdminPanel/src/app/app.component.html
+++ b/AdminPanel/src/app/app.component.html
@@ -10,5 +10,9 @@
   </mat-toolbar>
 </p>
 
-<router-outlet></router-outlet>
+<div class="main-content-wrapper">
+  <router-outlet></router-outlet>
+</div>
+
+
 
