--- a/AdminPanel/src/app/orders-list/orders-list.component.html
+++ b/AdminPanel/src/app/orders-list/orders-list.component.html
@@ -1,27 +1,13 @@
 <div class="header">
-    <h1 style="display: inline;">
+    <h1 class="title">
         Orders List
         </h1>
-        <div style="float: right;">
+        <div class="buttons">
             <button mat-flat-button color="accent">New Order</button>
         </div>
 </div>
 
-<!-- 
-<table mat-table [dataSource]="orders" class="mat-elevation-z8">
-
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> Customer </th>
-      <td mat-cell *matCellDef="let element">  </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="[displayColumns]"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
-  </table>
-  
-   -->
-
-
+<div class="loading" *ngIf="isLoading">Loading...</div>
 
    <table mat-table [dataSource]="orders" class="mat-elevation-z8">
 
