adminPanel: auto update order list

--- a/AdminPanel/src/app/create-order/create-order.component.html
+++ b/AdminPanel/src/app/create-order/create-order.component.html
@@ -1,86 +1,71 @@
+<h2>Create Order</h2>
+
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+
+  <div>
+    <mat-form-field>
+      <mat-label>Customer Name</mat-label>
+      <input matInput placeholder="" required formControlName="customerName" />
+      <mat-hint></mat-hint>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field>
+      <mat-label>Seller Name</mat-label>
+      <input matInput placeholder="" formControlName="sellerName" />
+      <mat-hint></mat-hint>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field>
+      <mat-label>Total Quantity</mat-label>
+      <input type="number" matInput placeholder="" formControlName="totalQuantity" />
+      <mat-hint></mat-hint>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field>
+      <mat-label>Total Discount</mat-label>
+      <input type="number" matInput placeholder="" formControlName="discount" />
+      <mat-hint></mat-hint>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field>
+      <mat-label>Promotion</mat-label>
+      <input matInput placeholder="" formControlName="promotion" />
+      <mat-hint></mat-hint>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field>
+      <mat-label>Pay Amount</mat-label>
+      <input type="number" matInput placeholder="" formControlName="payAmount" />
+      <mat-hint></mat-hint>
+    </mat-form-field>
+  </div>
 
 
+  <div>
+    <mat-form-field>
+      <mat-label>Note</mat-label>
+      <input type="number" matInput placeholder="" formControlName="note" />
+      <mat-hint></mat-hint>
+    </mat-form-field>
+  </div>
 
-<mat-card>
+</form>
+<div class="actions">
 
-    <mat-card-header>
-        <mat-card-title>                    
-          <span>Create Order</span>
-          </mat-card-title>            
-    </mat-card-header>
-
-    <form  [formGroup]="form" (ngSubmit)="onSubmit()">
-
-      <div>
-        <mat-form-field >
-          <mat-label>Customer Name</mat-label>
-          <input matInput placeholder="" formControlName="customerName" />                  
-          <mat-hint></mat-hint>
-        </mat-form-field>
-      </div>
-
-      <div>
-        <mat-form-field >
-          <mat-label>Seller Name</mat-label>
-          <input matInput placeholder="" formControlName="sellerName" />                  
-          <mat-hint></mat-hint>
-        </mat-form-field>
-      </div>
-
-      <div>
-        <mat-form-field >
-          <mat-label>Total Quantity</mat-label>
-          <input type="number" matInput placeholder="" formControlName="totalQuantity" />                  
-          <mat-hint></mat-hint>
-        </mat-form-field>
-      </div>
-
-      <div>
-        <mat-form-field >
-          <mat-label>Total Discount</mat-label>
-          <input type="number" matInput placeholder="" formControlName="discount" />                  
-          <mat-hint></mat-hint>
-        </mat-form-field>
-      </div>
-
-      <div>
-        <mat-form-field >
-          <mat-label>Promotion</mat-label>
-          <input matInput placeholder="" formControlName="promotion" />                  
-          <mat-hint></mat-hint>
-        </mat-form-field>
-      </div>
-
-      <div>
-        <mat-form-field >
-          <mat-label>Pay Amount</mat-label>
-          <input type="number" matInput placeholder="" formControlName="payAmount" />                  
-          <mat-hint></mat-hint>
-        </mat-form-field>
-      </div>
-        
-
-      <div>
-        <mat-form-field >
-          <mat-label>Note</mat-label>
-          <input type="number" matInput placeholder="" formControlName="note" />                  
-          <mat-hint></mat-hint>
-        </mat-form-field>
-      </div>
-      
-      </form>
-    
-    
-      <mat-card-actions>
-        
-      <button mat-flat-button color="primary" (click)="onSubmit()" [disabled]="isLoading">
-        
-
-        Create Order</button>
-      <button mat-button (click)="onCancel()" [disabled]="isLoading">Cancel</button>
-      <span *ngIf="isLoading" style="display: inline-block;"><mat-spinner [diameter]="20"></mat-spinner></span>
-      </mat-card-actions>
-
-</mat-card>
-
-
+  <button mat-flat-button color="primary" (click)="onSubmit()" [disabled]="isLoading">
+    Create Order</button>
+  <button mat-button (click)="onCancel()" [disabled]="isLoading">Cancel</button>
+  <span *ngIf="isLoading" style="display: inline-block;">
+    <mat-spinner [diameter]="20"></mat-spinner>
+  </span>
+</div>
