--- a/AdminPanel/src/app/create-order/create-order.component.scss
+++ b/AdminPanel/src/app/create-order/create-order.component.scss
@@ -15,4 +15,8 @@ form{
         mat-form-field{
             width:100%;
         }
+
+        .actions{
+            margin-top: 16px;
+        }
 }
